15-Ingress/Flask/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-world
  annotations:
    # Use specific annotations for your controller (e.g., Nginx)
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx # Identifies which Ingress Controller should handle this
  rules:
    - host: "example.com"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hello-world
                port:
                  number: 80
